Mise en place du login et debut de la liaison profil/data

--- a/Cook/Cook.csproj
+++ b/Cook/Cook.csproj
@@ -144,6 +144,7 @@
     <Compile Include="View\Register.xaml.cs">
       <DependentUpon>Register.xaml</DependentUpon>
     </Compile>
+    <Compile Include="View\Session.cs" />
     <Compile Include="View\Tools.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
